# ZedCore

./: .gitignore  README.md  SPEC.md  pyproject.toml
examples/: factorial.zed  hello_zero.zed  iban_validator.zed  sequences.zed  verify_loop.zed
tests/: __init__.py  test_interpreter.py  test_lexer.py  test_parser.py  test_runtime.py  test_values.py
zedcore/: __init__.py  __main__.py  ast_nodes.py  environment.py  errors.py  interpreter.py  ledger.py  lexer.py  parser.py  runtime.py  stdlib.py  values.py
zedcore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
